ajout react app

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script type="text/javascript" src="/javascripts/scriptDeepLink.js"></script>
+
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="website/changepwd">Lien vers modifs mdp</a>
   </body>
 </html>
