--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+.allContent{
+ background-color: aquamarine;
+ display:"flex";
+ flex:1;
+ flex-direction: row;
+}
