--- a/views/changepwd.ejs
+++ b/views/changepwd.ejs
@@ -3,9 +3,33 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="allContent">
+
+
+    <h1>Bonjour <%= title %></h1>
+    <div class="row">
+      <div class="col s5 pwd1 input-field ">
+        <input placeholder="" id="first_name" type="text" class="validate">
+        <label for="first_name">Mot de passe</label>
+      </div>
+      <div class="col s5 offset-s2 pwd2 input-field ">
+        <input placeholder="" id="first_name" type="text" class="validate">
+        <label for="first_name">Mot de passe</label>
+      </div>
+    </div>
+    <div class="divider"></div>
+    <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
+
+  </div>
   </body>
 </html>
