--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+
+.leaflet-container{
+  width:100%;
+  height: 100vh;
+  background-color: black;
+  z-index: 1;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
